--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -33,7 +33,7 @@
                             <h1 class="h1 mb-md">Oi, Eu sou David, Estudante
                                    <span class="hlight">Eng Software</span>
                             </h1>
-                            <p class="header-text mb-bg">
+                            <p class="p header-p mb-bg">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod sem eget hendrerit lacinia. Etiam at tempor purus, at rhoncus elit. Vivamus scelerisque efficitur convallis. Integer sit amet arcu in magna commodo tempus. Integer magna nibh, posuere.
                             </p>
                             <div class="btn-section">
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div class="col-1-of-3">
-                        <img src="img/K-On-Big.png" alt="Open to work" class="header-img">
+                        <img src="img/K-On.png" alt="Open to work" class="header-img">
                     </div>
                 </div>
             </div>
@@ -56,16 +56,16 @@
                 <h1 class="h1 mb-bg">My Works</h1>
                 <div class="row d-flex-wrap">
                     <div class="project-box">
-                        <img src="img/chat-app.jpg" alt="chatapp-project" class="project-img">
+                         
                     </div>
                     <div class="project-box">
-                        <img src="img/chat-app.jpg" alt="chatapp-project" class="project-img">
+                        <a href=""><img src="img/chat-app.jpg" alt="chatapp-project" class="project-img"></a>
                     </div>
                     <div class="project-box">
-                        <img src="img/chat-app.jpg" alt="chatapp-project" class="project-img">
+                        <a href=""><img src="img/chat-app.jpg" alt="chatapp-project" class="project-img"></a>
                     </div>
                     <div class="project-box">
-                        <img src="img/chat-app.jpg" alt="chatapp-project" class="project-img">
+                        <a href=""><img src="img/chat-app.jpg" alt="chatapp-project" class="project-img"></a>
                     </div>
                 </div>
             </div>
@@ -83,11 +83,11 @@
                     <div class="col-1-of-2">
                         <div class="skills-text-wrap">
                             <h2 class="h2">Design</h2>
-                            <p class="header-text mb-bg">
+                            <p class="p mb-bg">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod sem eget hendrerit lacinia. Etiam at tempor purus, at rhoncus elit. Vivamus scelerisque efficitur convallis. Integer sit amet arcu in magna commodo tempus. Integer magna nibh, posuere.
                             </p>
                             <h2 class="h2">Development</h2>
-                            <p class="header-text">
+                            <p class="p">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod sem eget hendrerit lacinia. Etiam at tempor purus, at rhoncus elit. Vivamus scelerisque efficitur convallis. Integer sit amet arcu in magna commodo tempus. Integer magna nibh, posuere.
                             </p>
                         </div>
@@ -101,14 +101,17 @@
     <footer class="footer">
         <div class="container">
             <div class="row justify-center">
-                <div class="circle">
-                    <i class="icon fa-solid fa-envelope"></i>
+                <a href="">
+                    <div class="circle"><i class="icon fa-solid fa-envelope"></i>
+                </a>
                 </div>
-                <div class="circle">
-                    <i class="icon fa-brands fa-linkedin-in"></i>
+                <a href="">
+                    <div class="circle"><i class="icon fa-brands fa-linkedin-in"></i>
+                </a>
                 </div>
-                <div class="circle">
-                    <i class="icon fa-brands fa-github"></i>
+                <a href="">
+                    <div class="circle"><i class="icon fa-brands fa-github"></i>
+                </a>
                 </div>
             </div>
         </div>
